--- a/frontend/app/scss/navbar.scss
+++ b/frontend/app/scss/navbar.scss
@@ -5,6 +5,7 @@
   background-color: $PRIMARY;
   height: 50px;
   padding: 5px;
+  margin-bottom: 30px;
   text-align: center;
   box-sizing: border-box;
   .nav-logo {
